added further sections where I found little errors and put main.pdf in gitignore

--- a/chpt/4-2-1-8_KPT_Gruppe.tex
+++ b/chpt/4-2-1-8_KPT_Gruppe.tex
@@ -36,6 +36,8 @@ Die Hälfte aller der Kpetene-Gruppe zugewiesenen GE sind rund- bis spitzbodige 
 
 Die rund- bis spitz-bodigen Schalen der Kpetene-Gruppen zeigen regelmäßig einbiegende Ränder (C3; Abb.~\ref{fig:KPT85-101-Gef}). Lediglich das fotografierte Gefäß verfügt über einen kurzen, ausbiegenden Rand (B1; Abb.~\ref{fig:KPT85_Foto-Gef}). Die Mündungen sind regelmäßig schräg nach innen abgestrichen (M6). Zwei GE weisen gerillte Randlippen auf (M4).
 
+Lediglich bei einer GE konnte die Form des Bodens beobachtete werden. Es handelte sich um einen leicht spitzen Rundboden. Die fotografierte GE aus Kpetene zeigt ebenfalls einen runden, leicht spitz zulaufenden Boden (Abb.~\ref{fig:KPT85_Foto-Gef}).
+
 \begin{figure*}[p]
 	\centering
 	\includegraphics[width=\textwidth]{GIS/output/3-1-1-8_KPT_Verbreitung.pdf}
@@ -47,7 +49,7 @@ Die rund- bis spitz-bodigen Schalen der Kpetene-Gruppen zeigen regelmäßig einb
 $\;$ \\
 Durch die Nutzung verschiedener Verzierungselemente werden die GE der Kpetene-Gruppe regelhaft in einen unteren sowie einen oberen Teil untergliedert. Während der untere Teil flächigen Mattenabdruck (Tab.~\ref{tab:Verzierungselemente}: 12) zeigt, zeichnet sich der obere Teil durch horizontale, alternierende Bänder mit Schnitzroulette aus (Abb.~\ref{fig:KPT85_Typvertreter}). Die gebänderte Verzierung der Gefäßoberteile kann neben verschiedenen Schnitzroulette-Variationen auch Ritzverzierungen umfassen (Abb.~\ref{fig:KPT85_Foto-Gef}). Eine GE weist drei mit dem gleichen Roulette gefertigte horizontale  Bänder sowie ein bogenförmiges, girlandenartiges Band auf (Abb.~\ref{fig:KPT85-101-Gef}). Der bestimmende Anteil der Verzierungselemente der Kpetene-Gruppe sind verschiedene Variationen von Schnitzroulette (Tab.~\ref{tab:Verzierungselemente}: 21.5, 21.7 und 21.12).
 
-Eine großer Teil der Verzierungselemente der Kpetene-Keramik machen verschiedene Formen von Schnitzrouletteverzierung aus (58\,\%). Vegetabilische Roulette wurde in keinem Fall beobachtet. Das Schnitzroulette findet sich ohne Ausnahme auf den oberen Gefäßteilen, auf dem Bauch sowie im Schulterbereich der Gefäße. Nur eine GE zeigt auch Schnitzroulette auf dem Rand. In seltenerem Maße treten auch horizontale Rillen auf (Tab.~\ref{tab:Verzierungselemente}: 02.1; 15\,\%). Sehr viel seltener lassen sich im Material horizontale Bänder aus feinen Eindrücken beobachten (Tab.~\ref{tab:Verzierungselemente}: 04.16; 8\,\%; Abb.~\ref{fig:KPT85-101-Gef}). Lediglich bei einer GE konnte die Form des Bodens beobachtete werden. Es handelte sich um einen leicht spitzen Rundboden. Die fotografierte GE aus Kpetene zeigt ebenfalls einen runden, leicht spitz zulaufenden Boden (Abb.~\ref{fig:KPT85_Foto-Gef}).
+Eine großer Teil der Verzierungselemente der Kpetene-Keramik machen verschiedene Formen von Schnitzrouletteverzierung aus (58\,\%). Vegetabilische Roulette wurde in keinem Fall beobachtet. Das Schnitzroulette findet sich ohne Ausnahme auf den oberen Gefäßteilen, auf dem Bauch sowie im Schulterbereich der Gefäße. Nur eine GE zeigt auch Schnitzroulette auf dem Rand. In seltenerem Maße treten auch horizontale Rillen auf (Tab.~\ref{tab:Verzierungselemente}: 02.1; 15\,\%). Sehr viel seltener lassen sich im Material horizontale Bänder aus feinen Eindrücken beobachten (Tab.~\ref{tab:Verzierungselemente}: 04.16; 8\,\%; Abb.~\ref{fig:KPT85-101-Gef}).
 
 \paragraph{Datierung}
 $\;$ \\
