--- a/r/Ch4_Fig_Diagram_Fabrics.Rmd
+++ b/r/Ch4_Fig_Diagram_Fabrics.Rmd
@@ -8,14 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-library(ggplot2)
-library(reshape2)
-library(plyr)
-library(RSQLite)
-library(splitstackshape)
-
-drv <- dbDriver("SQLite")
-con <- dbConnect(drv, "../data/CongoDB.sqlite")
+source("setup.r")
 ```
 
 ```{r}
