--- a/chpt/1_Einleitung.tex
+++ b/chpt/1_Einleitung.tex
@@ -14,7 +14,7 @@ Unter der Bezeichnung \enquote*{nordwestliches Kongobecken} werden in dieser Arb
 \begin{figure*}[p]
 	\centering
 	% \includegraphics[width=\textwidth]{output/figs/1_Fundstellen_GIS.pdf}
-	\includegraphics[width=.95\textwidth]{outp/figs/1_Fundstellen.pdf}
+	\includegraphics[width=.95\textwidth]{fig/1_Fundstellen.pdf}
 	\caption{Arbeitsgebiet: Untersuchte Fundstellen. \\ Study Area: ... . \\ Region de etude: ... .}
 	\label{fig:ArbeitsgebietKarte}
 \end{figure*}
@@ -154,7 +154,7 @@ Bei den im Arbeitsgebiet angetroffenen Böden handelt es sich zu großen Teilen 
 
 \begin{figure*}[p]
 \centering
-\includegraphics[width=\textwidth]{outp/figs/1-5_Vegetation.pdf}
+\includegraphics[width=\textwidth]{fig/1-5_Vegetation.pdf}
 \caption{Vegetationskarte des Arbeitsgebietes \parencite[nach][]{Mayaux.2003}}
 \label{fig:VegetationKarte}
 \end{figure*}
@@ -168,7 +168,7 @@ Verstärkte Forschung in den vergangenen Jahrzehnten revidierte die Sichtweise, 
 \begin{figure*}[p]
 	\centering
 	%\includegraphics[width=\textwidth]{lit/Maley2001_7Abb4_modDS.pdf}
-	\includegraphics[width=\textwidth]{outp/figs/1-5_RefugienMaley.pdf}
+	\includegraphics[width=\textwidth]{fig/1-5_RefugienMaley.pdf}
 	\caption{\enquote{Regenwald-Refugien} (schraffiert) nach \textcite[7 Abb.~4]{Maley.2001} mit untersuchten Fundstellen.}
 	\label{fig:Maley2001_7Abb4}
 \end{figure*}
@@ -177,7 +177,7 @@ Basierend auf der rezenten Variabilität des Baumartenbestandes wurde von \textc
 
 \begin{figure*}[p]
 \centering
-\includegraphics[width=.8\textwidth]{outp/figs/1-5_PalaeoUmwelt.pdf}
+\includegraphics[width=.8\textwidth]{fig/1-5_PalaeoUmwelt.pdf}
 \caption{Paläoumweltarchive: Kartierung der wichtigste lakustrine und palustrine sowie fluviatile und alluviale Paläoumweltarchive sowie das maximale Alter der Ablagerungen \parencites[nach]{Brncic.2007}{Brncic.2009}{Sangen.2009}{Kiahtipes.2011}{Kiahtipes.2016}.}
 \label{fig:PalaeoumweltArch_Karte}
 \end{figure*}
